--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "description": "Official laravel plugin for cryptocurrency payment gateway",
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
-        "laravel/framework": "5.8.*"
+        "php": "^7.1.3"
     },
     "extra": {
         "branch-alias": {
