--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,5 @@
             "App\\": "app/"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "minimum-stability": "dev"
 }
