--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,12 @@
     "description": "Official laravel plugin for cryptocurrency payment gateway",
     "license": "MIT",
     "require": {
-        "php": "^7.1.3"
+        "laravel/framework": ">=7.0"
     },
     "extra": {
+        "branch-alias": {
+            "dev-main": "0.2-dev"
+        },
         "laravel": {
             "providers": [
                 "Paymentgateway\\PaymentGatewayServiceProvider"
@@ -15,8 +18,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "Paymentgateway\\": "src/"
         }
-    },
-    "minimum-stability": "dev"
+    }
 }
